unpackaged/main/default/objects/WorkOrder/fields/Access_Details__c.field-meta.xml
<CustomField>
    <fullName>Access_Details__c</fullName>
    <label>Access Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>