unpackaged/main/default/objects/WorkOrder/fields/Account_Number_Reference__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Reference__c</fullName>
    <formula>Account.Account_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number Reference</label>
    <type>Text</type>
</CustomField>