unpackaged/main/default/objects/WorkOrder/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Account Status form Account object</description>
    <formula>TEXT( Account.Account_Status__c )</formula>
    <inlineHelpText>Account Status</inlineHelpText>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>