unpackaged/main/default/objects/WorkOrder/fields/Arrival_Window__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Window__c</fullName>
    <formula>if(

OR( ISBLANK( Arrival_Window_Start__c),ISBLANK( Arrival_Window_End__c )),



&quot;&quot;

,
IF(

HOUR(Arrival_Window_Start__c) &gt; 11,

IF (HOUR(Arrival_Window_Start__c) = 12, &quot;12&quot;,
TEXT( HOUR(Arrival_Window_Start__c) -12 ) )
&amp;&quot;:&quot;&amp;

LPAD(TEXT( MINUTE(Arrival_Window_Start__c)), 2,&quot;0&quot;)&amp; &quot; PM&quot;

,

TEXT( HOUR(Arrival_Window_Start__c) )

&amp;&quot;:&quot;&amp;

LPAD(TEXT( MINUTE(Arrival_Window_Start__c)), 2,&quot;0&quot;)&amp; &quot; AM&quot;

)


 &amp;&quot; - &quot; &amp;  

IF(

HOUR(Arrival_Window_End__c ) &gt; 11,

IF (HOUR(Arrival_Window_End__c) = 12, &quot;12&quot;,
TEXT( HOUR(Arrival_Window_End__c) -12 ) )
&amp;&quot;:&quot;&amp;

LPAD(TEXT( MINUTE(Arrival_Window_End__c )), 2,&quot;0&quot;)&amp; &quot; PM&quot;

,

TEXT( HOUR(Arrival_Window_End__c ) )

&amp;&quot;:&quot;&amp;

LPAD(TEXT( MINUTE(Arrival_Window_End__c )), 2,&quot;0&quot;)&amp; &quot; AM&quot;

)


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrival Window</label>
    <type>Text</type>
</CustomField>