unpackaged/main/default/objects/WorkOrder/fields/Arrival_Window_End__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Window_End__c</fullName>
    <label>Arrival Window End</label>
    <type>Time</type>
</CustomField>