unpackaged/main/default/objects/WorkOrder/fields/Arrival_Window_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Window_End_Date_Time__c</fullName>
    <label>Arrival Window End Date/Time</label>
    <type>DateTime</type>
</CustomField>