unpackaged/main/default/objects/WorkOrder/fields/Arrival_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Window_Start__c</fullName>
    <label>Arrival Window Start</label>
    <type>Time</type>
</CustomField>