unpackaged/main/default/objects/WorkOrder/fields/Arrival_Window_Start_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Window_Start_TEXT__c</fullName>
    <formula>LEFT(TEXT( Arrival_Window_Start__c ),8)</formula>
    <label>Arrival Window Start (TEXT)</label>
    <type>Text</type>
</CustomField>