unpackaged/main/default/objects/WorkOrder/fields/Attendance_Notes_for_Office__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Notes_for_Office__c</fullName>
    <inlineHelpText>Summary of all &quot;attendance notes&quot; for this Work Order.
Attendance notes are recorded on each Service Appointment at the end of the attendance.</inlineHelpText>
    <label>Attendance Notes for Office</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>