unpackaged/main/default/objects/WorkOrder/fields/Awaiting_Electrical_Cert__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Electrical_Cert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be ticked when the Job requires an Electrical Certification. This will create a Task for the Technical Support Team when selected</description>
    <inlineHelpText>To be ticked when the Job requires an Electrical Certification. This will create a Task for the Technical Support Team when selected</inlineHelpText>
    <label>Awaiting Electrical Cert</label>
    <type>Checkbox</type>
</CustomField>