unpackaged/main/default/objects/WorkOrder/fields/Book_Online_URL__c.field-meta.xml
<CustomField>
    <fullName>Book_Online_URL__c</fullName>
    <formula>IF($Organization.Id = &#39;00D3H0000000ivA&#39;,&quot;https://aspect.co.uk&quot;,&quot;https://aspect.co.uk.hyv.gotest.it&quot;)&amp;
&quot;/book-now/?id=&quot;&amp;Id&amp;
&quot;&amp;acc=&quot;&amp; AccountId &amp;
&quot;&amp;acn=&quot;&amp; Account_Number_Reference__c  &amp;
&quot;&amp;exc=&quot;&amp; &quot;Yes&quot; &amp;
&quot;&amp;fn=&quot;&amp;SUBSTITUTE( Contact.FirstName , &quot; &quot;, &quot;%20&quot;) &amp;
&quot;&amp;ln=&quot;&amp;SUBSTITUTE( Contact.LastName , &quot; &quot;, &quot;%20&quot;) &amp;
&quot;&amp;ema=&quot;&amp; Contact.Email &amp;
&quot;&amp;pho=&quot;&amp;  SUBSTITUTE(Contact.Phone, &quot; &quot;, &quot;&quot;)</formula>
    <label>Book Online URL</label>
    <type>Text</type>
</CustomField>