unpackaged/main/default/objects/WorkOrder/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OLB direct from client</fullName>
            </value>
            <value>
                <fullName>OLB converted by support team</fullName>
            </value>
            <value>
                <fullName>Follow on work</fullName>
            </value>
            <value>
                <fullName>Contact Centre booking</fullName>
            </value>
            <value>
                <fullName>OP app self reactive</fullName>
            </value>
            <value>
                <fullName>OP app reactive referral</fullName>
            </value>
            <value>
                <fullName>Op App Self Service</fullName>
            </value>
            <value>
                <fullName>BARK</fullName>
                <label>Bark</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>