unpackaged/main/default/objects/WorkOrder/fields/Budget_Labour__c.field-meta.xml
<CustomField>
    <fullName>Budget_Labour__c</fullName>
    <formula>Costs_and_Charges__r.Cost_Labour__c + Costs_and_Charges__r.Cost_List_Price_Services__c - Costs_and_Charges__r.Cost_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Labour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>