unpackaged/main/default/objects/WorkOrder/fields/Budget_Other__c.field-meta.xml
<CustomField>
    <fullName>Budget_Other__c</fullName>
    <formula>Costs_and_Charges__r.Cost_Other_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>