unpackaged/main/default/objects/WorkOrder/fields/Budget_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Budget_Remaining__c</fullName>
    <formula>Budget_Total__c  -  Requisition_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>