unpackaged/main/default/objects/WorkOrder/fields/Budget_Total__c.field-meta.xml
<CustomField>
    <fullName>Budget_Total__c</fullName>
    <formula>Budget_Labour__c +  Budget_Other__c +  Budget_Van_Stock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>