unpackaged/main/default/objects/WorkOrder/fields/Budget_Van_Stock__c.field-meta.xml
<CustomField>
    <fullName>Budget_Van_Stock__c</fullName>
    <formula>Costs_and_Charges__r.Cost_Materials_Engineer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Van Stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>