unpackaged/main/default/objects/WorkOrder/fields/C_C_Charge_Call_out_fee__c.field-meta.xml
<CustomField>
    <fullName>C_C_Charge_Call_out_fee__c</fullName>
    <formula>Costs_and_Charges__r.Call_Out_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C&amp;C Call Out Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>