unpackaged/main/default/objects/WorkOrder/fields/C_C_Charge_Total__c.field-meta.xml
<CustomField>
    <fullName>C_C_Charge_Total__c</fullName>
    <formula>Costs_and_Charges__r.Charge_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NET Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>