unpackaged/main/default/objects/WorkOrder/fields/C_C_Charge_Total_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>C_C_Charge_Total_Incl_VAT__c</fullName>
    <formula>C_C_Charge_Total__c *1.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>