unpackaged/main/default/objects/WorkOrder/fields/C_C_Charge_Total_Van_Stock_Product_Req__c.field-meta.xml
<CustomField>
    <fullName>C_C_Charge_Total_Van_Stock_Product_Req__c</fullName>
    <description>Use in the On Site conversion Flow, less SOQL calls to have this info sat on a WO object than to retrieve it directly from the C&amp;C object. + Total of Product Required of type &#39;Van Stock&#39; on the related Work Order</description>
    <formula>Costs_and_Charges__r.Charge_Total_Van_Stock_Product_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of Product Required of type &#39;Van Stock&#39; on the related Work Order</inlineHelpText>
    <label>C&amp;C Charge: Total Van Stock Product Req</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>