unpackaged/main/default/objects/WorkOrder/fields/C_C_Discount_PL__c.field-meta.xml
<CustomField>
    <fullName>C_C_Discount_PL__c</fullName>
    <description>Discount selected for Work Order e.g. £25 off, 10% off Labour etc</description>
    <formula>TEXT(Costs_and_Charges__r.Discount_PL__c)</formula>
    <inlineHelpText>Discount selected for Work Order e.g. £25 off, 10% off Labour etc</inlineHelpText>
    <label>C&amp;C Discount PL</label>
    <type>Text</type>
</CustomField>