unpackaged/main/default/objects/WorkOrder/fields/C_C_Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>C_C_Discount_Value__c</fullName>
    <formula>Costs_and_Charges__r.Discount_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>