unpackaged/main/default/objects/WorkOrder/fields/Call_Out_Fee__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_Fee__c</fullName>
    <label>Call Out Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>