unpackaged/main/default/objects/WorkOrder/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Reason given by the Customer for Cancelling the Work Order</description>
    <label>Cancellation Reason</label>
    <type>TextArea</type>
</CustomField>