unpackaged/main/default/objects/WorkOrder/fields/Cancellation_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Time_Stamp__c</fullName>
    <description>Time Stamp for when the Work Order was Cancelled</description>
    <label>Cancellation Time Stamp</label>
    <type>DateTime</type>
</CustomField>