unpackaged/main/default/objects/WorkOrder/fields/CCT_Charge_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>CCT_Charge_Admin_Fee__c</fullName>
    <formula>Costs_and_Charges__r.Fixed_Price_Admin_Fee_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCT Charge Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>