unpackaged/main/default/objects/WorkOrder/fields/CCT_Charge_Call_Out_Fee__c.field-meta.xml
<CustomField>
    <fullName>CCT_Charge_Call_Out_Fee__c</fullName>
    <formula>Costs_and_Charges__r.Call_Out_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCT Charge Call Out Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>