unpackaged/main/default/objects/WorkOrder/fields/CCT_Charge_Other_Total__c.field-meta.xml
<CustomField>
    <fullName>CCT_Charge_Other_Total__c</fullName>
    <formula>Costs_and_Charges__r.Charge_Other_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCT Charge Other Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>