unpackaged/main/default/objects/WorkOrder/fields/CCT_Charge_ULEZ__c.field-meta.xml
<CustomField>
    <fullName>CCT_Charge_ULEZ__c</fullName>
    <formula>Costs_and_Charges__r.Charge_ULEZ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCT Charge ULEZ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>