unpackaged/main/default/objects/WorkOrder/fields/CCT_Charge_VAT__c.field-meta.xml
<CustomField>
    <fullName>CCT_Charge_VAT__c</fullName>
    <formula>CCT_Charge_NET__c * 0.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCT Charge VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>