unpackaged/main/default/objects/WorkOrder/fields/CCT_Cost_Call_Out__c.field-meta.xml
<CustomField>
    <fullName>CCT_Cost_Call_Out__c</fullName>
    <formula>Costs_and_Charges__r.Cost_Call_Out__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCT Cost Call Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>