unpackaged/main/default/objects/WorkOrder/fields/CCT_Cost_List_Price_Services__c.field-meta.xml
<CustomField>
    <fullName>CCT_Cost_List_Price_Services__c</fullName>
    <formula>Costs_and_Charges__r.Cost_List_Price_Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCT Cost List Price Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>