unpackaged/main/default/objects/WorkOrder/fields/CCT_Discount_Manual_Percentage__c.field-meta.xml
<CustomField>
    <fullName>CCT_Discount_Manual_Percentage__c</fullName>
    <formula>Costs_and_Charges__r.Discount_Manual_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCT Discount Manual Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>