unpackaged/main/default/objects/WorkOrder/fields/Charge_Labour__c.field-meta.xml
<CustomField>
    <fullName>Charge_Labour__c</fullName>
    <label>Charge Labour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>