unpackaged/main/default/objects/WorkOrder/fields/Charge_List_Price_Services__c.field-meta.xml
<CustomField>
    <fullName>Charge_List_Price_Services__c</fullName>
    <label>Charge List Price Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>