unpackaged/main/default/objects/WorkOrder/fields/Charge_Materials__c.field-meta.xml
<CustomField>
    <fullName>Charge_Materials__c</fullName>
    <label>Charge Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>