unpackaged/main/default/objects/WorkOrder/fields/Charge_Total__c.field-meta.xml
<CustomField>
    <fullName>Charge_Total__c</fullName>
    <formula>( Charge_Labour__c + Charge_List_Price_Services__c +  Call_Out_Fee__c +  Charge_ULEZ__c +  Charge_Collection_Fee__c +  Charge_Materials__c +  Fixed_Price_Admin_Fee__c )-  Discount_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>