unpackaged/main/default/objects/WorkOrder/fields/Charge_Total_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Charge_Total_Incl_VAT__c</fullName>
    <formula>Charge_Total__c *1.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Total Incl. VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>