unpackaged/main/default/objects/WorkOrder/fields/Chargeable_Visit_Pay_Op_or_Not__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Visit_Pay_Op_or_Not__c</fullName>
    <formula>TEXT (Costs_and_Charges__r.Chargeable_Visit_Pay_Op_or_Not__c)</formula>
    <label>Chargeable Visit? + Pay Op or Not?</label>
    <type>Text</type>
</CustomField>