unpackaged/main/default/objects/WorkOrder/fields/Collection_Fee_at_point_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Collection_Fee_at_point_of_Booking__c</fullName>
    <description>Deletion Candidate
To record the value of Collection Fees entered at the point of booking - at this could change by the time the work is completed.</description>
    <inlineHelpText>To record the value of Collection Fees entered at the point of booking - at this could change by the time the work is completed.</inlineHelpText>
    <label>Collection Fee at point of Booking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>