unpackaged/main/default/objects/WorkOrder/fields/Confirmed_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will be changed on the mobile app if the Operative decides a different Work Type should&#39;ve been selected.</description>
    <inlineHelpText>This will be changed on the mobile app if the Operative decides a different Work Type should&#39;ve been selected.</inlineHelpText>
    <label>Confirmed Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Work Orders (Confirmed Work Type)</relationshipLabel>
    <relationshipName>Work_Orders_Confirmed_Work_Type</relationshipName>
    <type>Lookup</type>
</CustomField>