unpackaged/main/default/objects/WorkOrder/fields/Contact_Email_who_Raised_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_who_Raised_Work_Order__c</fullName>
    <description>Email Address of the Contact who raised the Work Order</description>
    <inlineHelpText>Email Address of the Contact who raised the Work Order</inlineHelpText>
    <label>Contact Email who Raised Work Order</label>
    <type>Email</type>
</CustomField>