unpackaged/main/default/objects/WorkOrder/fields/Costs_and_Charges__c.field-meta.xml
<CustomField>
    <fullName>Costs_and_Charges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Costs and Charges</label>
    <referenceTo>Costs_and_Charges__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>