unpackaged/main/default/objects/WorkOrder/fields/Created_by_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Profile_Name__c</fullName>
    <description>Created by Profile Name</description>
    <formula>IF(TRIM(CreatedBy.Profile.Name)=&#39;PT1&#39;, &#39;System Administrator&#39;,CreatedBy.Profile.Name)</formula>
    <inlineHelpText>Created by Profile Name</inlineHelpText>
    <label>Created by Profile Name</label>
    <type>Text</type>
</CustomField>