unpackaged/main/default/objects/WorkOrder/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Required for Engineer Mobile page layouts, otherwise using the standard field &#39;Account&#39; gives them a link to access the Account record, which they do need access to for Flows/Processes.</description>
    <formula>Account.Name</formula>
    <inlineHelpText>Customer Name</inlineHelpText>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>