unpackaged/main/default/objects/WorkOrder/fields/Customer_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Customer_Purchase_Order__c</fullName>
    <formula>Job__r.Key_Account_PO_Ref_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Purchase Order</label>
    <type>Text</type>
</CustomField>