unpackaged/main/default/objects/WorkOrder/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>DELETE</description>
    <label>Date (delete)</label>
    <type>Date</type>
</CustomField>