unpackaged/main/default/objects/WorkOrder/fields/DATETIMEVALUE_PROBLEM_for_SF_Support__c.field-meta.xml
<CustomField>
    <fullName>DATETIMEVALUE_PROBLEM_for_SF_Support__c</fullName>
    <formula>DATETIMEVALUE( TEXT(Requested_Date__c) &amp; &quot; &quot; &amp; LEFT(TEXT(  Arrival_Window_Start__c  ),8) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DATETIMEVALUE PROBLEM for SF Support</label>
    <type>DateTime</type>
</CustomField>