unpackaged/main/default/objects/WorkOrder/fields/Deposit_Invoice_Balance_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice_Balance_Outstanding__c</fullName>
    <formula>Job__r.Deposit_Invoice__r.Balance_Outstanding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Invoice Balance Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>