unpackaged/main/default/objects/WorkOrder/fields/Deposit_Invoice_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice_Lookup__c</fullName>
    <formula>Job__r.Deposit_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Invoice Lookup</label>
    <type>Text</type>
</CustomField>