unpackaged/main/default/objects/WorkOrder/fields/Deposit_Invoice_Value__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice_Value__c</fullName>
    <formula>Job__r.Deposit_Invoice__r.Charge_Gross_Minus_Credits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Invoice Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>